[package]
name = "ilmen-http"
version = "0.0.2"
edition = "2021"
author = "damien@ilmen.fr"
license = "MIT"
description = "A little homemade http server"
homepage = "https://github.com/superdaminou/ilmen-http"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4"}
ctrlc = "3.4.1"