[package]
name = "ilmen-http"
version = "0.0.9"
edition = "2021"
author = "damien@ilmen.fr"
license = "MIT"
description = "A little homemade http server"
homepage = "https://github.com/superdaminou/ilmen-http"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4"}
ctrlc = "3.4.1"
strum = "0.26"
strum_macros = "0.26"
anyhow = {version = "1.0"}
thiserror = {version = "2.0"}
base64 = { version = "0.22" }
signal-hook = { version = "0.3.17"}